--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -5,8 +5,10 @@
   width: 50%;
   height: 100%;
   background-color: aqua;
+  border-radius: 0.4rem;
   .iframe {
     width: 100%;
     height: 100%;
+    
   }
 }
