--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -1,55 +1,54 @@
 @import "./variables.scss";
 @import "./mixins.scss";
 
-.landingpage{
-    height: 100vh;
-    width: 100%;
-    background:$cardGradient;
-    @include flexbox ($alignItems: center , $justifyContent:center);     
+.landingpage {
+  height: 100vh;
+  width: 100%;
+  background: $cardGradient;
+  @include flexbox($alignItems: center, $justifyContent: center);
 
-    .animated-typing{
-        font-size: $slider-font-size;
-    }
-     
+  .animated-typing {
+    font-size: $slider-font-size;
+  }
 }
 
-.projectContainer{
-    height: 100vh;
-    background:$cardGradient;
+.projectContainer {
+  height: 100vh;
+  width: 100%;
+ .cardContainer{
     @include flexbox;
+ }
 }
 
-.landingpage{
-    height: 100vh;
-    width: 100%;
-    background:$cardGradient;
-    @include flexbox ($alignItems: center , $justifyContent:center);     
+.landingpage {
+  height: 100vh;
+  width: 100%;
+  background: $cardGradient;
+  @include flexbox($alignItems: center, $justifyContent: center);
 
-    .animated-typing{
-        font-size: $slider-font-size;
-    }
-     
+  .animated-typing {
+    font-size: $slider-font-size;
+  }
 }
 
-.aboutMe{
-    @include flexbox($justifyContent:space-between);
-    background-color: $blue;
-    height: $vh100;
-    padding:1%;
+.aboutMe {
+  @include flexbox($justifyContent: space-between);
+  background-color: $blue;
+  height: $vh100;
+  padding: 1%;
 }
 
-.contactPage{
-    height: $vh100;
-    background-color: $blue;
-    margin: 0 auto;
-    @include flexbox($justifyContent:center);
- .contactContainer{
-        @include flexbox($alignItems:center);
-        border: 1px solid white;
-        
-        height: 60%;
-        width: 70%;
-        max-width: 1200px;
+.contactPage {
+  height: $vh100;
+  background-color: $blue;
+  margin: 0 auto;
+  @include flexbox($justifyContent: center);
+  .contactContainer {
+    @include flexbox($alignItems: center);
+    border-radius: 0.5rem;
 
-    }
+    height: 60%;
+    width: 70%;
+    max-width: 1200px;
+  }
 }
