more more progress

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,7 +15,8 @@ $purple: #483261;
 $almostpurple: #943b71;
 $pink: #d35d8f;
 $white: white;
-$navbarRepsonsiveBg:#0b2153;
+$navbarBg:  rgba(0,0,0, 5);
+$navbarRepsonsiveBg:#0b2153 ;
 
 $cardGradient: no-repeat center center fixed
 linear-gradient(to top, $darkblue, $blue, $purple, $almostpurple);
