--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,24 @@
 @import "reset.scss";
+@import 'mixins.scss';
+@import 'variables.scss';
+header{
+   background-color: rgba($color: $blue, $alpha: 0.5);
+  
+nav{
+    @include flexbox ($justifyContent:space-between);
+    font-size: $secondaryFontSize;
+
+    h1{margin: 1%;}
+ 
+    .navLinks{
+        @include flexbox ($justifyContent:space-between);
+        width: 25%;
+        font-weight: 100;
+        margin: 1%;
+        li{
+            margin-right: 2%;
+        }
+    }
+    
+}
+}
