--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,6 +21,11 @@ $navbarRepsonsiveBg:#0b2153 ;
 $cardGradient: no-repeat center center fixed
 linear-gradient(to top, $darkblue, $blue, $purple, $almostpurple);
 
+$expGradient: no-repeat center center fixed
+linear-gradient(to bottom, $darkblue, $blue, $purple, $almostpurple);
+
+$opositeGradient: no-repeat center center fixed
+linear-gradient(to bottom, $almostpurple, $purple,$blue, $darkblue);
 // font size 
 $primaryFontSize:3rem;
 $secondaryFontSize:2rem;
@@ -32,6 +37,7 @@ $cardH2Size:1.5rem;
 //vh
 $vh100 :100vh;
 $vh50 :50vh;
+$vh75:75vh;
 
 //about img
 $aboutImgHeight:60%;
