--- a/src/styles/aboutFig.scss
+++ b/src/styles/aboutFig.scss
@@ -1,8 +1,13 @@
 @import "mixins.scss";
 @import "variables.scss";
 
-.aboutFig{
-    width: 60%;
-    
+.AboutFig{
+    margin-right:5%;
+    width: 30%;
+    height: 80%;
+ border: 1px solid white;
     @include flexbox($justifyContent:center,$alignItems:center,$direction:column);
+img{
+    @include imgCover;
+}
 }
