--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -30,7 +30,8 @@ header {
 
     
         .navLink {
-            background: $cardGradient;
+            width: 100%;
+            
           text-align: center;
           &:hover{
             opacity: 0.5;
