--- a/src/styles/aboutText.scss
+++ b/src/styles/aboutText.scss
@@ -1,15 +1,24 @@
 @import "mixins.scss";
 @import "variables.scss";
+@import "breakpoints.scss";
 
 .aboutText{
     width: 40%;
     height: 60%;
     @include flexbox($justifyContent:space-evenly,$alignItems:center,$direction:column);
+
+    @include md{
+        width:  100%;
+        height: 50%;
+        padding-top: 10%;
+    }
     h2{
         font-size: $primaryFontSize;
+        text-align: center;
     }
     h5{
         font-size: $secondaryFontSize;
+        text-align: center;
     }
     p{
         font-size: $cardPFontSize;
