--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -1,11 +1,16 @@
 @import "mixins.scss";
 @import "variables.scss";
+@import "breakpoints.scss";
 
 .map {
-  width: 50%;
+  width: 100%;
   height: 100%;
   background-color: aqua;
   border-radius: 0.4rem;
+  @include md{
+    width: 90%;
+    height: 50%;
+  }
   .iframe {
     width: 100%;
     height: 100%;
