--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -2,18 +2,10 @@
 @import "variables.scss";
 @import "breakpoints.scss";
 
-.map {
+.map iframe {
   width: 100%;
   height: 100%;
-  background-color: aqua;
-  border-radius: 0.4rem;
   @include md{
-    width: 90%;
-    height: 50%;
-  }
-  .iframe {
-    width: 100%;
-    height: 100%;
-    
+    height: 250px;
   }
 }
