--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -21,7 +21,8 @@
 .projectContainer {
   height: 100%;
   width: 100%;
-  @include flexbox ($direction:row,$wrap:wrap);
+  @include flexbox ($direction:row,$wrap:wrap,$justifyContent:center);
+  
 
   
  
@@ -63,15 +64,17 @@
 }
 
 .contact {
+  margin-top: 5%;
+  
   height: $vh100;
   width: 100%;
   background-color: $blue;
   @include flexbox ($direction:row,$alignItems:center,$justifyContent:center);
   .contactContainer {
+    
     max-width: 1200px;
     margin: auto;
-    height: 60%;
-    width: 100%;
+ 
     @include grid("grid-template-columns", "1fr 1fr", 0px, 0px);
     gap: 1.5rem;
     color: white;
