--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -33,6 +33,7 @@ $cardPFontSize:16px;
 $abouth2FontSize: 3.5rem;
 $abouth5FontSize: 1.5rem;
 $cardH2Size:1.5rem;
+$responsiveCardFontSize:13px;
 
 //vh
 $vh100 :100vh;
