--- a/src/styles/aboutText.scss
+++ b/src/styles/aboutText.scss
@@ -15,13 +15,16 @@
     h2{
         font-size: $primaryFontSize;
         text-align: center;
+        margin-bottom: 3%;
     }
     h5{
         font-size: $secondaryFontSize;
         text-align: center;
+        margin-bottom: 3%;
     }
     p{
         font-size: $cardPFontSize;
         text-align: center;
+        margin-bottom: 3%;
     }
 }
